--- a/packages/opni-agent/opni-agent/charts/Chart.yaml
+++ b/packages/opni-agent/opni-agent/charts/Chart.yaml
@@ -3,8 +3,7 @@ appVersion: 0.4.1
 dependencies:
 - condition: kube-prometheus-stack.enabled
   name: kube-prometheus-stack
-  repository: https://prometheus-community.github.io/helm-charts
-  version: 35.0.3
+  repository: file://./charts/kube-prometheus-stack
 description: Opni Monitoring Agent
 name: opni-monitoring-agent
 type: application
