--- a/packages/opni/charts/questions.yaml
+++ b/packages/opni/charts/questions.yaml
@@ -287,3 +287,23 @@ questions:
         default: "/data/store"
         required: true
         label: "Directory"
+  - variable: logging.enabled
+    type: boolean
+    default: "false"
+    group: "Logging"
+    label: "Enable Logging"
+    show_subquestion_if: true
+    subqeustions:
+    - variable: logging.externalURL
+      type: string
+      default: ""
+      label: Opensearch External URL
+    - variable: logging.opensearch.persistence.enabled
+      type: boolean
+      default: false
+      label: Enable persistent storage
+    - variable: logging.opensearch.persistence.storageClass
+      show_if: logging.opensearch.persistence.enabled=true
+      default: ""
+      type: storageclass
+      label: Storage Class
