--- a/packages/opni/charts/templates/configmap.yaml
+++ b/packages/opni/charts/templates/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: opni-manager-config
+  namespace: {{ include "opni.namespace" . }}
 data:
   controller_manager_config.yaml: |
     apiVersion: controller-runtime.sigs.k8s.io/v1alpha1
