--- a/packages/opni/charts/templates/rbac.yaml
+++ b/packages/opni/charts/templates/rbac.yaml
@@ -1,3 +1,32 @@
+{{- $namespace := printf "%s" (include "opni.namespace" .) }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: opni-leader-election-role
+  namespace: {{ $namespace }}
+rules:
+- apiGroups:
+  - ""
+  - coordination.k8s.io
+  resources:
+  - configmaps
+  - leases
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -1190,6 +1219,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: opni-leader-election-rolebinding
+  namespace: {{ $namespace }}
   labels:
     {{- include "opni.labels" . | nindent 4 }}
 roleRef:
@@ -1199,7 +1229,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: opni-manager
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ $namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -1214,7 +1244,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: opni-manager
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ $namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -1229,7 +1259,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: opni-manager
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ $namespace }}
 ---
 apiVersion: v1
 kind: ServiceAccount
