--- a/packages/opni/charts/values.yaml
+++ b/packages/opni/charts/values.yaml
@@ -119,3 +119,59 @@ monitoring:
   grafana:
     # Grafana hostname.
     hostname: ""
+
+logging:
+  enabled: true
+
+  opensearch:
+    image:
+      repository: opensearchproject/opensearch
+      override: ""
+
+    version: 1.3.1
+
+    exposeDataNodees:
+      enabled: true
+      serviceType: ClusterIP
+
+    persistence:
+      enabled: true
+      storageClass: ""
+
+    controlplane:
+      replicas: 3
+      resources:
+        requests:
+          cpu: 500m
+          memory: 1Gi
+        limits:
+          memory: 1Gi
+
+    data:
+      replicas: 2
+      diskSize: 32Gi
+
+      # Memory limits and requests should be the same
+      resources:
+        requests:
+          cpu: 500m
+          memory: 2Gi
+        limits:
+          memory: 2Gi
+
+      # JVM memory setting should be half the memory limit
+      jvm: "-Xmx1G -Xms1G"
+
+  dashboards:
+    image:
+      repository: rancher/opensearch-dashboards
+      override: ""
+    
+    version: 1.3.1
+
+    replicas: 1
+
+
+global:
+  cattle:
+    systemDefaultRegistry: ""
