--- a/packages/opni/charts/templates/logging/service.yaml
+++ b/packages/opni/charts/templates/logging/service.yaml
@@ -1,4 +1,4 @@
-{{- if ( and .Values.logging.enabled .Values.logging.exposeDataNodes.enabled ) }}
+{{- if ( and .Values.logging.enabled .Values.logging.opensearch.exposeDataNodes.enabled ) }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -14,5 +14,5 @@ spec:
   selector:
     opster.io/opensearch-cluster: opni
     opster.io/opensearch-nodepool: nodes
-  type: {{ .Values.logging.exposeDataNodes.serviceType }}
+  type: {{ .Values.logging.opensearch.exposeDataNodes.serviceType }}
 {{- end }}
