--- a/packages/opni/charts/values.yaml
+++ b/packages/opni/charts/values.yaml
@@ -130,7 +130,7 @@ logging:
 
     version: 1.3.1
 
-    exposeDataNodees:
+    exposeDataNodes:
       enabled: true
       serviceType: ClusterIP
 
