--- a/packages/opni/charts/templates/logging/service.yaml
+++ b/packages/opni/charts/templates/logging/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: expose-data nodes
+  name: expose-data-nodes
   labels:
     opster.io/opensearch-cluster: opni
     opster.io/opensearch-nodepool: nodes
