--- a/config/chart-crds/patches/webhook_in_logadapters.yaml
+++ b/config/chart-crds/patches/webhook_in_logadapters.yaml
@@ -9,7 +9,7 @@ spec:
     webhook:
       clientConfig:
         service:
-          namespace: system
+          namespace: replace-me
           name: opni-webhook
           path: /convert
       conversionReviewVersions:
