--- a/config/crd/patches/webhook_in_opnidemoes.yaml
+++ b/config/crd/patches/webhook_in_opnidemoes.yaml
@@ -10,7 +10,7 @@ spec:
       clientConfig:
         service:
           namespace: system
-          name: webhook-service
+          name: opni-webhook
           path: /convert
       conversionReviewVersions:
       - v1
