--- a/packages/opni-agent/opni-agent/charts/templates/deployment.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/deployment.yaml
@@ -1,14 +1,15 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "opni-monitoring-agent.fullname" . }}
+  name: {{ include "opni-agent.fullname" . }}
+  namespace: {{ include "opni-agent.namespace" . }}
   labels:
-    {{- include "opni-monitoring-agent.labels" . | nindent 4 }}
+    {{- include "opni-agent.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      {{- include "opni-monitoring-agent.selectorLabels" . | nindent 6 }}
+      {{- include "opni-agent.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -16,26 +17,35 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "opni-monitoring-agent.selectorLabels" . | nindent 8 }}
+        {{- include "opni-agent.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "opni-monitoring-agent.serviceAccountName" . }}
+      serviceAccountName: opni-agent
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: agent
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - agent
+          {{- if .Values.metrics.enabled }}
+            - --metrics
+          {{- if .Values.metrics.insecure }}
+            - --insecure
+          {{- end }}
+          {{- end }}
+          {{- if .Values.logging.enabled }}
+            - --logging
+          {{- end }}
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ .Values.metrics.enabled | ternary "8080" "8081" }}
               protocol: TCP
           env:
             - name: POD_NAMESPACE
@@ -43,8 +53,15 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
           volumeMounts:
+          {{- if .Values.metrics.enabled }}
             - name: config
               mountPath: /etc/opni-monitoring
+          {{- end }}
+          {{- if .Values.logging.enabled }}
+            - mountPath: /tmp/k8s-webhook-server/serving-certs
+              name: cert
+              readOnly: true
+          {{- end }}
           livenessProbe:
             httpGet:
               path: /healthz
@@ -87,6 +104,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
+      {{- if .Values.metrics.enabled }}
         - name: config
           secret:
             secretName: agent-config
@@ -94,3 +112,10 @@ spec:
               - key: config.yaml
                 path: config.yaml
             defaultMode: 256
+      {{- end }}
+      {{- if .Values.logging.enabled }}
+        - name: cert
+          secret:
+            defaultMode: 420
+            secretName: webhook-server-cert
+    {{- end }}
