--- a/packages/opni-agent/opni-agent/charts/templates/service.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/service.yaml
@@ -1,14 +1,35 @@
+---
+{{- if .Values.metrics.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
-  name: opni-monitoring-agent
+  name: opni-agent
+  namespace: {{ include "opni-agent.namespace" . }}
   labels:
-    {{- include "opni-monitoring-agent.labels" . | nindent 4 }}
+    {{- include "opni-agent.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   selector:
-    {{- include "opni-monitoring-agent.selectorLabels" . | nindent 4 }}
+    {{- include "opni-agent.selectorLabels" . | nindent 4 }}
   ports:
     - name: http
       port: {{ .Values.service.port }}
       targetPort: http
+---
+{{- end }}
+{{- if .Values.logging.enabled }}
+apiVersion: v1
+kind: Service
+metadata:
+  name: opni-webhook
+  namespace: {{ include "opni-agent.namespace" . }}
+  labels:
+    {{- include "opni-agent.labels" . | nindent 4 }}
+spec:
+  ports:
+    - port: 443
+      targetPort: 9443
+  selector:
+    {{- include "opni-agent.selectorLabels" . | nindent 4 }}
+---
+{{- end }}
