--- a/packages/opni/charts/templates/deployment.yaml
+++ b/packages/opni/charts/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
           - --leader-elect
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: 9443
