Make grafana redirect URI configurable

--- a/config/crd/bases/opni.io_gateways.yaml
+++ b/config/crd/bases/opni.io_gateways.yaml
@@ -1221,6 +1221,8 @@ spec:
                       type: object
                   type: object
                 type: array
+              grafanaHostname:
+                type: string
               hostname:
                 type: string
               image:
