--- a/.drone.yml
+++ b/.drone.yml
@@ -10,8 +10,8 @@ steps:
     image: docker
     environment: &env
       DAGGER_LOG_FORMAT: "plain"
-      DAGGER_CACHE_FROM: type=local,src=/cache
-      DAGGER_CACHE_TO: type=local,mode=max,dest=/cache
+      DAGGER_CACHE_FROM: type=registry,mode=max,ref=rancher/opni-buildkit-cache
+      DAGGER_CACHE_TO: type=registry,mode=max,ref=rancher/opni-buildkit-cache
     commands:
       - apk add --no-cache curl
       - curl -sL https://dl.dagger.io/dagger/install.sh | sh
@@ -19,8 +19,6 @@ steps:
     volumes: &volumes
       - name: docker
         path: /var/run/docker.sock
-      - name: cache
-        path: /cache
   - name: test
     image: docker
     environment:
@@ -142,6 +140,3 @@ volumes:
   - name: docker
     host:
       path: /var/run/docker.sock
-  - name: cache
-    host:
-      path: /var/lib/docker/volumes/opni-build-cache/_data
