Fix helm syntax and add nil pointer check

--- a/packages/opni/charts/templates/gateway.yaml
+++ b/packages/opni/charts/templates/gateway.yaml
@@ -20,11 +20,11 @@ spec:
       clientSecret: {{ .openid.clientSecret }}
       roleAttributePath: {{ .openid.roleAttributePath }}
     {{- end }}
-    {{- if eq .provider "noauth "}}
+  {{- end}}
+    {{- if eq .Values.gateway.auth.provider "noauth" }}
     noauth:
       grafanaHostname: {{ .Values.monitoring.grafana.hostname }}
     {{- end }}
-  {{- end }}
   {{- with .Values.nodeSelector }}
   nodeSelector:
     {{- toYaml . | nindent 4 }}
