Add ingest pipeline to opni reconciler

--- a/config/crd/bases/opni.io_multiclusterrolebindings.yaml
+++ b/config/crd/bases/opni.io_multiclusterrolebindings.yaml
@@ -41,6 +41,11 @@ spec:
                   namespace:
                     type: string
                 type: object
+              opensearchConfig:
+                properties:
+                  indexRetention:
+                    type: string
+                type: object
               opensearchExternalURL:
                 type: string
             type: object
