--- a/config/crd/bases/opni.io_opniclusters.yaml
+++ b/config/crd/bases/opni.io_opniclusters.yaml
@@ -2348,6 +2348,8 @@ spec:
                     type: object
                   defaultRepo:
                     type: string
+                  enableIngestPreprocessing:
+                    type: boolean
                   enableLogIndexManagement:
                     type: boolean
                   externalOpensearch:
