--- a/packages/opni/charts/templates/logging/multiclusterrolebinding.yaml
+++ b/packages/opni/charts/templates/logging/multiclusterrolebinding.yaml
@@ -8,5 +8,7 @@ spec:
   opensearch:
     name: opni
     namespace: {{ include "opni.namespace" . }}
+  opensearchConfig:
+    indexRetention: {{ .Values.logging.retention }}
   opensearchExternalURL: {{ .Values.logging.externalURL }}
 {{- end }}
