--- a/packages/opni/charts/values.yaml
+++ b/packages/opni/charts/values.yaml
@@ -123,9 +123,11 @@ monitoring:
 logging:
   enabled: false
 
+  retention: 7d
+
   opensearch:
     image:
-      repository: opensearchproject/opensearch
+      repository: rancher/opensearch
       override: ""
 
     version: 1.3.1
