--- a/packages/opni-agent/opni-agent/charts/values.yaml
+++ b/packages/opni-agent/opni-agent/charts/values.yaml
@@ -5,7 +5,7 @@ fullnameOverride: ""
 image:
   repository: rancher/opni
   # Overrides the image tag whose default is the chart appVersion.
-  tag: latest
+  tag: ""
   pullPolicy: Always
 
 
