add filesystem rule finder; add agent rule config to test env; agent bugfixes

--- a/pkg/test/testdata/cortex/config.yaml
+++ b/pkg/test/testdata/cortex/config.yaml
@@ -88,6 +88,6 @@ compactor:
       store: inmemory
 
 ruler_storage:
-  backend: local
-  local:
-    directory: "{{ .StorageDir }}/rules"
+  backend: filesystem
+  filesystem:
+    dir: "{{ .StorageDir }}/rules"
