--- a/.drone.yml
+++ b/.drone.yml
@@ -42,6 +42,7 @@ steps:
         - drone-publish.rancher.io
       branch:
         - main
+        - release
   - name: publish-dockerhub-tag
     image: docker
     environment:
@@ -61,6 +62,7 @@ steps:
         - drone-publish.rancher.io
       refs:
         - refs/heads/main
+        - refs/heads/release
         - refs/tags/*
   - name: publish-dockerhub-latest
     image: docker
@@ -81,6 +83,7 @@ steps:
         - drone-publish.rancher.io
       refs:
         - refs/heads/main
+        - refs/heads/release
         - refs/tags/*
   - name: publish-dockerhub-main
     image: docker
@@ -101,6 +104,7 @@ steps:
         - drone-publish.rancher.io
       branch:
         - main
+        - release
   - name: publish-opensearch-dashboards-latest
     image: docker
     environment:
@@ -119,6 +123,7 @@ steps:
         - drone-publish.rancher.io
       branch:
         - main
+        - release
   - name: publish-opensearch-latest
     image: docker
     environment:
@@ -137,6 +142,7 @@ steps:
         - drone-publish.rancher.io
       branch:
         - main
+        - release
   - name: publish-opensearch-dashboards-tag
     image: docker
     environment:
@@ -174,6 +180,7 @@ steps:
         - drone-publish.rancher.io
       refs:
         - refs/heads/main
+        - refs/heads/release
         - refs/tags/*
 volumes:
   - name: docker
