--- a/packages/opni/charts/values.yaml
+++ b/packages/opni/charts/values.yaml
@@ -117,6 +117,7 @@ monitoring:
       filesystem:
         directory: /data/store
   grafana:
+    enabled: true
     # Grafana hostname.
     hostname: ""
 
@@ -168,7 +169,7 @@ logging:
     image:
       repository: rancher/opensearch-dashboards
       override: ""
-    
+
     version: 1.3.1
 
     replicas: 1
@@ -177,7 +178,6 @@ ai:
   enabled: false
   s3:
     internal: {}
-
 
 global:
   cattle:
