--- a/packages/opni/opni/charts/templates/deployment.yaml
+++ b/packages/opni/opni/charts/templates/deployment.yaml
@@ -37,12 +37,12 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.name
-          - name: NODE_FEATURE_DISCOVERY_IMAGE
-            value: k8s.gcr.io/nfd/node-feature-discovery:v0.7.0
-          - name: OPNI_SYSTEM_NAMESPACE
+          - name: POD_NAMESPACE
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+          - name: NODE_FEATURE_DISCOVERY_IMAGE
+            value: k8s.gcr.io/nfd/node-feature-discovery:v0.7.0
           args:
           - --health-probe-bind-address=:8081
           - --metrics-bind-address=127.0.0.1:8080
