Create unary gateway plugin handler

--- a/config/crd/bases/opni.io_gateways.yaml
+++ b/config/crd/bases/opni.io_gateways.yaml
@@ -1271,6 +1271,10 @@ spec:
                 items:
                   type: string
                 type: array
+              serviceAnnotations:
+                additionalProperties:
+                  type: string
+                type: object
               serviceType:
                 default: LoadBalancer
                 type: string
