--- a/packages/opni/charts/templates/gateway.yaml
+++ b/packages/opni/charts/templates/gateway.yaml
@@ -9,6 +9,11 @@ metadata:
 spec:
   hostname: {{ .Values.gateway.hostname }}
   serviceType: {{ .Values.gateway.serviceType }}
+  {{- with .Values.gateway.serviceAnnotations }}
+  serviceAnnotations:
+   {{- toYaml . | nindent 4 }}
+  {{- end }}
+  serviceAnnotations
   {{- with .Values.gateway.auth }}
   auth:
     provider: {{ .provider }}
